<resources>
    <string name="app_name">PinPals</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="pick_start_time">Start Time</string>
    <string name="pick_end_time">End Time</string>
    <string name="pick_date">Pick a Date</string>
    <string name="event_name">Event Name</string>
    <string name="event_description">Write a Description</string>

    <string name="entertainment">Entertainment</string>
    <string name="fitness">Fitness</string>
    <string name="food">Food</string>
    <string name="social">Social</string>
    <string name="studying">Studying</string>
    <string name="other">Other</string>


</resources>

